fixed recipe grid layout for overflowed text

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -212,6 +212,12 @@ Footer {
     margin-bottom: 30px;
 }
 
+#recipe_grid_View .card-text {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
 #recipe_grid_View .card:nth-of-type(3n+0) {
     margin-right: 0;
 }
